opam-version: "2.0"
name: "certicoq-vellvm-deps-lock"
depends: [
  "atd" {= "2.16.0"}
  "atdgen" {= "2.16.0"}
  "atdgen-runtime" {= "2.16.0"}
  "atdts" {= "2.16.0"}
  "base" {= "v0.16.4"}
  "base-bigarray" {= "base"}
  "base-threads" {= "base"}
  "base-unix" {= "base"}
  "biniou" {= "1.2.2"}
  "camlp-streams" {= "5.0.1"}
  "cmdliner" {= "1.3.0"}
  "conf-clang" {= "2"}
  "conf-g++" {= "1.0"}
  "conf-gmp" {= "5"}
  "conf-linux-libc-dev" {= "0"}
  "conf-pkg-config" {= "4"}
  "coq" {= "8.20.1"}
  "coq-ceres" {= "0.4.1"}
  "coq-compcert" {= "3.13.1"}
  "coq-core" {= "8.20.1"}
  "coq-elpi" {= "3.0.0"}
  "coq-equations" {= "1.3.1+8.20"}
  "coq-ext-lib" {= "0.12.2"}
  "coq-flocq" {= "4.2.1"}
  "coq-itree" {= "5.2.1"}
  "coq-mathcomp-ssreflect" {= "2.4.0"}
  "coq-menhirlib" {= "20240715"}
  "coq-metacoq-common" {= "1.3.2+8.20"}
  "coq-metacoq-erasure" {= "1.3.2+8.20"}
  "coq-metacoq-erasure-plugin" {= "1.3.2+8.20"}
  "coq-metacoq-pcuic" {= "1.3.2+8.20"}
  "coq-metacoq-safechecker" {= "1.3.2+8.20"}
  "coq-metacoq-safechecker-plugin" {= "1.3.2+8.20"}
  "coq-metacoq-template" {= "1.3.2+8.20"}
  "coq-metacoq-template-pcuic" {= "1.3.2+8.20"}
  "coq-metacoq-utils" {= "1.3.2+8.20"}
  "coq-paco" {= "4.2.3"}
  "coq-quickchick" {= "2.0.4"}
  "coq-simple-io" {= "1.11.0"}
  "coq-stdlib" {= "8.20.1"}
  "coqide-server" {= "8.20.1"}
  "cppo" {= "1.8.0"}
  "csexp" {= "1.5.2"}
  "dune" {= "3.20.1"}
  "dune-configurator" {= "3.20.1"}
  "easy-format" {= "1.3.4"}
  "elpi" {= "3.0.1"}
  "menhir" {= "20240715"}
  "menhirCST" {= "20240715"}
  "menhirLib" {= "20240715"}
  "menhirSdk" {= "20240715"}
  "ocaml" {= "4.14.2"}
  "ocaml-base-compiler" {= "4.14.2"}
  "ocaml-compiler-libs" {= "v0.12.4"}
  "ocaml-config" {= "2"}
  "ocaml-options-vanilla" {= "1"}
  "ocamlbuild" {= "0.16.1"}
  "ocamlfind" {= "1.9.8"}
  "ounit2" {= "2.2.7"}
  "ppx_derivers" {= "1.2.1"}
  "ppx_deriving" {= "6.0.3"}
  "ppx_optcomp" {= "v0.16.0"}
  "ppxlib" {= "0.35.0"}
  "qcheck" {= "0.26"}
  "qcheck-core" {= "0.26"}
  "qcheck-ounit" {= "0.26"}
  "re" {= "1.13.2"}
  "rocq-elpi" {= "3.0.0"}
  "rocq-hierarchy-builder" {= "1.10.0"}
  "rocq-mathcomp-ssreflect" {= "2.4.0"}
  "seq" {= "base"}
  "sexplib0" {= "v0.16.0"}
  "stdio" {= "v0.16.0"}
  "stdlib-shims" {= "0.3.0"}
  "yojson" {= "2.2.2"}
  "zarith" {= "1.14"}
]
pin-depends: [
  [ "coq-vellvm.dev"
    "git+https://github.com/vellvm/vellvm.git#40037b26e4ac933c79fa41fcce06675382b5f8a0"
  ]
]
